--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ futures = "0.3.31"
 log = "0.4.22"
 env_logger = "0.11.5"
 clap = { version = "4.5.23", features = ["derive"] }
+serde_json = "1.0.133"
