fetch sensors and parse date

--- a/sensor-api/Cargo.toml
+++ b/sensor-api/Cargo.toml
@@ -14,3 +14,4 @@ serde_repr = "^0.1"
 url = "^2.5"
 uuid = { version = "^1.8", features = ["serde", "v4"] }
 reqwest = { version = "^0.12", features = ["json", "multipart"] }
+chrono = { version = "0.4.39", features = ["serde"] }
