--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.133"
 dotenvy = "0.15.7"
 sensor_api = {path = "sensor-api" }
+chrono = "0.4.39"
