--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,5 @@ serde_json = "1.0.133"
 dotenvy = "0.15.7"
 sensor_api = {path = "sensor-api" }
 chrono = "0.4.39"
+eyre = "0.6.12"
+color-eyre = "0.6.3"
