--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,24 @@ env:
 
 jobs:
 
+  binary-x86:
+    timeout-minutes: 15
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Build
+        run: cargo build --release
+      - name: upload artefact
+        uses: actions/upload-artifact@v3
+        with:
+          name: sqcli
+          path: target/release/sqcli
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: target/release/sqcli
+
   debian-package:
     timeout-minutes: 15
     runs-on: ubuntu-latest
