--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,7 +11,7 @@ env:
 
 jobs:
   tests:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted 
     timeout-minutes: 6
     steps:
     - uses: actions/checkout@v3
