--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,7 +11,7 @@ env:
 
 jobs:
   tests:
-    runs-on: self-hosted 
+    runs-on: gfz
     timeout-minutes: 6
     steps:
     - uses: actions/checkout@v3
